Fix Youtube sidebar contents being shifted on mouse events.

--- a/css/styles.css
+++ b/css/styles.css
@@ -682,6 +682,7 @@ body {
     list-style: none;
     margin-left: 50px;
     margin-top: 0;
+    min-width: 350px;
     padding: 10px;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
